// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeatherScreen renders correctly 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#fff",
      "flex": 1,
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginHorizontal": 20,
        "marginVertical": 16,
      }
    }
  >
    <Text
      style={
        {
          "flex": 0.28,
          "fontSize": 16,
          "fontWeight": "bold",
          "marginRight": 5,
          "textAlign": "right",
        }
      }
    >
      Temperature Unit:
    </Text>
    <View
      style={
        {
          "flex": 0.8,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#000",
            "borderColor": "#000",
            "borderRadius": 8,
            "borderWidth": 1,
            "flex": 1,
            "marginHorizontal": 4,
            "opacity": 1,
            "padding": 12,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#aaa",
                "fontSize": 16,
              },
              {
                "color": "#fff",
              },
            ]
          }
        >
          Celsius (°C)
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#f5f5f5",
            "borderColor": "#ccc",
            "borderRadius": 8,
            "borderWidth": 1,
            "flex": 1,
            "marginHorizontal": 4,
            "opacity": 1,
            "padding": 12,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#aaa",
                "fontSize": 16,
              },
              false,
            ]
          }
        >
          Fahrenheit (°F)
        </Text>
      </View>
    </View>
  </View>
  <View>
    <TextInput
      onChangeText={[MockFunction]}
      onSubmitEditing={[Function]}
      placeholder="Enter a location..."
      style={
        {
          "backgroundColor": "#fff",
          "borderColor": "black",
          "borderRadius": 8,
          "borderWidth": 1,
          "height": 40,
          "margin": 20,
          "paddingHorizontal": 8,
        }
      }
      value=""
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "position": "absolute",
          "right": 30,
          "top": 25,
        }
      }
      testID="searchButton"
    >
      <ViewManagerAdapter_SymbolModule
        animated={false}
        colors={[]}
        name="magnifyingglass.circle"
        resizeMode="scaleAspectFit"
        style={
          [
            {
              "height": 24,
              "width": 24,
            },
            [
              {
                "height": 30,
                "width": 30,
              },
              undefined,
            ],
          ]
        }
        tintColor="black"
        type="monochrome"
        weight="regular"
      />
    </View>
    <View
      style={
        {
          "backgroundColor": "white",
          "position": "absolute",
          "top": 60,
          "width": "100%",
          "zIndex": 10,
        }
      }
    >
      <RCTScrollView
        data={[]}
        getItem={[Function]}
        getItemCount={[Function]}
        keyExtractor={[Function]}
        onContentSizeChange={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={0.0001}
        stickyHeaderIndices={[]}
        style={
          {
            "borderLeftWidth": 1,
            "borderRightWidth": 1,
            "marginHorizontal": 20,
            "maxHeight": 250,
          }
        }
        viewabilityConfigCallbackPairs={[]}
      >
        <View />
      </RCTScrollView>
      <Text
        style={
          {
            "color": "#666",
            "fontSize": 16,
            "marginTop": 16,
            "textAlign": "center",
          }
        }
      >
        No results found.
      </Text>
    </View>
  </View>
  <RCTScrollView>
    <View />
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`WeatherScreen renders the weather data correctly 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#fff",
      "flex": 1,
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginHorizontal": 20,
        "marginVertical": 16,
      }
    }
  >
    <Text
      style={
        {
          "flex": 0.28,
          "fontSize": 16,
          "fontWeight": "bold",
          "marginRight": 5,
          "textAlign": "right",
        }
      }
    >
      Temperature Unit:
    </Text>
    <View
      style={
        {
          "flex": 0.8,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#000",
            "borderColor": "#000",
            "borderRadius": 8,
            "borderWidth": 1,
            "flex": 1,
            "marginHorizontal": 4,
            "opacity": 1,
            "padding": 12,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#aaa",
                "fontSize": 16,
              },
              {
                "color": "#fff",
              },
            ]
          }
        >
          Celsius (°C)
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#f5f5f5",
            "borderColor": "#ccc",
            "borderRadius": 8,
            "borderWidth": 1,
            "flex": 1,
            "marginHorizontal": 4,
            "opacity": 1,
            "padding": 12,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#aaa",
                "fontSize": 16,
              },
              false,
            ]
          }
        >
          Fahrenheit (°F)
        </Text>
      </View>
    </View>
  </View>
  <View>
    <TextInput
      onChangeText={[MockFunction]}
      onSubmitEditing={[Function]}
      placeholder="Enter a location..."
      style={
        {
          "backgroundColor": "#fff",
          "borderColor": "black",
          "borderRadius": 8,
          "borderWidth": 1,
          "height": 40,
          "margin": 20,
          "paddingHorizontal": 8,
        }
      }
      value=""
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "position": "absolute",
          "right": 30,
          "top": 25,
        }
      }
      testID="searchButton"
    >
      <ViewManagerAdapter_SymbolModule
        animated={false}
        colors={[]}
        name="magnifyingglass.circle"
        resizeMode="scaleAspectFit"
        style={
          [
            {
              "height": 24,
              "width": 24,
            },
            [
              {
                "height": 30,
                "width": 30,
              },
              undefined,
            ],
          ]
        }
        tintColor="black"
        type="monochrome"
        weight="regular"
      />
    </View>
  </View>
  <RCTScrollView>
    <View>
      <View
        style={
          {
            "margin": 20,
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 24,
              "fontWeight": "bold",
              "marginBottom": 8,
            }
          }
        >
          Current Weather:
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "black",
              "borderRadius": 10,
              "borderWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginVertical": 16,
              "padding": 12,
            }
          }
        >
          <View
            style={
              {
                "maxWidth": "70%",
              }
            }
          >
            <Text
              style={
                {
                  "fontSize": 20,
                  "fontWeight": "bold",
                }
              }
            >
              New York
              ,
               
              USA
            </Text>
            <Text
              style={
                {
                  "fontSize": 16,
                  "marginBottom": 8,
                }
              }
            >
              NY
            </Text>
            <Text
              style={
                {
                  "fontSize": 18,
                  "marginBottom": 8,
                }
              }
            >
              Sunny
            </Text>
            <Text
              style={
                {
                  "fontSize": 16,
                  "marginBottom": 8,
                }
              }
            >
              H:
               
              86°
              , 
              L:
               
              68°
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "flex-start",
              }
            }
          >
            <Image
              source={
                {
                  "uri": "https://cdn.weather.com/icon.png",
                }
              }
              style={
                {
                  "height": 90,
                  "width": 90,
                }
              }
            />
            <Text
              style={
                {
                  "fontSize": 20,
                }
              }
            >
              77°
            </Text>
          </View>
        </View>
        <Text
          style={
            {
              "fontSize": 24,
              "fontWeight": "bold",
              "marginBottom": 8,
            }
          }
        >
          Forecast:
        </Text>
        <View
          style={
            {
              "borderBottomWidth": 0,
              "borderColor": "black",
              "borderRadius": 10,
              "borderWidth": 1,
              "marginTop": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderBottomColor": "black",
                "borderBottomWidth": 1,
                "borderRadius": 10,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 12,
              }
            }
          >
            <View>
              <Text
                style={
                  {
                    "fontSize": 16,
                  }
                }
              >
                22:00
              </Text>
              <Text
                style={
                  {
                    "fontSize": 16,
                  }
                }
              >
                Clear
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 16,
                  }
                }
              >
                68°
              </Text>
              <Image
                source={
                  {
                    "uri": "https://icon.png",
                  }
                }
                style={
                  {
                    "height": 30,
                    "marginLeft": 5,
                    "width": 30,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "borderBottomColor": "black",
                "borderBottomWidth": 1,
                "borderRadius": 10,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 12,
              }
            }
          >
            <View>
              <Text
                style={
                  {
                    "fontSize": 16,
                  }
                }
              >
                23:00
              </Text>
              <Text
                style={
                  {
                    "fontSize": 16,
                  }
                }
              >
                Cloudy
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 16,
                  }
                }
              >
                66°
              </Text>
              <Image
                source={
                  {
                    "uri": "https://icon.png",
                  }
                }
                style={
                  {
                    "height": 30,
                    "marginLeft": 5,
                    "width": 30,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "borderBottomColor": "black",
                "borderBottomWidth": 1,
                "borderRadius": 10,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 12,
              }
            }
          >
            <View>
              <Text
                style={
                  {
                    "fontSize": 16,
                  }
                }
              >
                00:00
              </Text>
              <Text
                style={
                  {
                    "fontSize": 16,
                  }
                }
              >
                Rainy
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <Text
                style={
                  {
                    "fontSize": 16,
                  }
                }
              >
                64°
              </Text>
              <Image
                source={
                  {
                    "uri": "https://icon.png",
                  }
                }
                style={
                  {
                    "height": 30,
                    "marginLeft": 5,
                    "width": 30,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;
